feat(s3stream): add object limitation to compaction (#339)
Signed-off-by: Shichao Nie <niesc@automq.com>